# libcmo21

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  COMPILE.md  CONTRIBUTING.md  DEVNOTE.md  LICENSE  LibRef.props  README.md  libcmo21.sln
Assets/: README.md
Assets/BMapBindings/pybmap/: .gitignore  README.md  pyproject.toml
Assets/BMapBindings/pybmap/src/pybmap/: bmap.py  bmap_wrapper.py  virtools_types.py
Assets/BMapBindings/pybmap/tests/: cli.py  main.py  testsuits.py
BMap/: BMExports.cpp  BMExports.hpp  BMap.cpp  BMap.hpp  BMap.vcxproj  BMap.vcxproj.filters  CMakeLists.txt
BMap/BMap/: BMExports.cpp  BMExports.hpp  BMap.hpp
Ballance/: CMakeLists.txt
Ballance/BMap/: CMakeLists.txt
Ballance/BMap/BMap/: BMExports.cpp  BMExports.hpp  BMap.cpp  BMap.hpp
Ballance/BMapInspector/: BMapInspector.cpp  CMakeLists.txt  Cli.cpp  Cli.hpp  Map.cpp  Map.hpp  Reporter.cpp  Reporter.hpp  Rule.cpp  Rule.hpp  Ruleset.cpp  Ruleset.hpp  Utils.cpp  Utils.hpp
Ballance/BMapInspector/Rule/: BBugRules.cpp  BBugRules.hpp  ChirsRules.cpp  ChirsRules.hpp  GpRules.cpp  GpRules.hpp  LXRules.cpp  LXRules.hpp  SOneRules.cpp  SOneRules.hpp  SSBRules.cpp  SSBRules.hpp  Shared.cpp  Shared.hpp  YYCRules.cpp  YYCRules.hpp  ZZQRules.cpp  ZZQRules.hpp
Ballance/BMapInspector/Ruleset/: BBugRules.cpp  BBugRules.hpp  ChirsRules.cpp  ChirsRules.hpp  GpRules.cpp  GpRules.hpp  LXRules.cpp  LXRules.hpp  SOneRules.cpp  SOneRules.hpp  SSBRules.cpp  SSBRules.hpp  YYCRules.cpp  YYCRules.hpp  ZZQRules.cpp  ZZQRules.hpp
Ballance/BMapInspector/Ruleset/Shared/: DupCmp.cpp  DupCmp.hpp  Name.cpp  Name.hpp  Sector.cpp  Sector.hpp  Utility.cpp  Utility.hpp
CMake/: BMapConfig.cmake.in  FindSTB.cmake  LibCmoConfig.cmake.in  VTVersion.hpp.in  custom_import_iconv.cmake  custom_import_stb.cmake  custom_import_yycc.cmake  custom_import_zlib.cmake
CodeGen/: .gitignore  CKClassidParser.g4  CKCommonHelper.java  CKDefinesParser.g4  CKERROR.py  (+30 more)
Docs/: CMakeLists.txt  Doxyfile.in  UNVIRT.md
Documents/: CKStateChunk.css  CKStateChunk.html  CKStateChunk.js  CMakeLists.txt  ClassOffset.fods  Doxyfile.in  IDAExportAddrConv.py  Recorder.txt  VTables.fods
IronPad/: CMakeLists.txt  IronPad.cpp  IronPad.hpp  IronPad.vcxproj  IronPad.vcxproj.filters
LibCmo/: CKDefines.hpp  CKEnums.hpp  CKFile.cpp  CKFile.hpp  CKFileReader.cpp  CKGlobals.cpp  CKGlobals.hpp  CKIdentifiers.hpp  CKManagers.hpp  CKMinContext.cpp  CKMinContext.hpp  CKObjects.hpp  CKStateChunk.cpp  CKStateChunk.hpp  CMakeLists.txt  LibCmo.vcxproj  LibCmo.vcxproj.filters  VTAll.hpp  VTConstants.h  VTConstants.hpp  VTEncoding.cpp  VTEncoding.hpp  VTImage.cpp  VTImage.hpp  VTInternal.hpp  VTManagers.hpp  VTObjects.hpp  VTReader.c  VTReader.cpp  VTReader.h  VTReader.hpp  VTStateChunk.cpp  VTStruct.cpp  VTStruct.hpp  VTUserAll.hpp  VTUtils.cpp  VTUtils.h  VTUtils.hpp  VxMemoryMappedFile.cpp  VxMemoryMappedFile.hpp
LibCmo/CK2/: CKBaseManager.hpp  CKBitmapData.cpp  CKBitmapData.hpp  CKContext.cpp  CKContext.hpp  CKDefines.hpp  CKEnums.hpp  CKFile.cpp  CKFile.hpp  CKFileOthers.cpp  CKFileReader.cpp  CKFileWriter.cpp  CKGlobals.cpp  CKGlobals.hpp  CKIdentifiers.hpp  CKStateChunk.cpp  CKStateChunk.hpp  CKStateChunkOthers.cpp  CKStateChunkReader.cpp  CKStateChunkWriter.cpp  CKStructs.hpp  CKTypes.hpp
LibCmo/CK2/CKManagerImplements/: CKBaseManager.cpp  CKBaseManager.hpp
LibCmo/CK2/CKObjectImplements/: CKObject.cpp  CKObject.hpp
LibCmo/CK2/DataHandlers/: CKBitmapHandler.cpp  CKBitmapHandler.hpp
LibCmo/CK2/MgrImpls/: CKBaseManager.cpp  CKBaseManager.hpp  CKObjectManager.cpp  CKObjectManager.hpp  CKPathManager.cpp  CKPathManager.hpp
LibCmo/CK2/ObjImpls/: CK3dEntity.cpp  CK3dEntity.hpp  CK3dObject.hpp  CKBeObject.cpp  CKBeObject.hpp  CKCamera.cpp  CKCamera.hpp  CKGroup.cpp  CKGroup.hpp  CKLight.cpp  CKLight.hpp  CKMaterial.cpp  CKMaterial.hpp  CKMesh.cpp  CKMesh.hpp  CKObject.cpp  CKObject.hpp  CKRenderObject.cpp  CKRenderObject.hpp  CKSceneObject.cpp  CKSceneObject.hpp  CKTargetCamera.cpp  CKTargetCamera.hpp  CKTargetLight.cpp  CKTargetLight.hpp  CKTexture.cpp  CKTexture.hpp
LibCmo/CKManagerImplements/: CKBaseManager.cpp
LibCmo/CKObjectImplements/: CKObject.cpp
LibCmo/LibCmo/: .gitignore  VTEncoding.cpp  VTEncoding.hpp  VTImage.cpp  VTInternal.hpp  VTUtils.cpp  VTUtils.hpp
LibCmo/LibCmo/CK2/: CKBitmapData.cpp  CKBitmapData.hpp  CKContext.cpp  CKContext.hpp  CKDefines.hpp  CKFile.hpp  CKFileOthers.cpp  CKFileReader.cpp  CKFileWriter.cpp  CKGlobals.cpp  CKGlobals.hpp  CKIdentifiers.hpp  CKStateChunk.hpp  CKStateChunkOthers.cpp  CKStateChunkWriter.cpp  CKTypes.hpp
LibCmo/LibCmo/CK2/DataHandlers/: CKBitmapHandler.cpp  CKBitmapHandler.hpp
LibCmo/LibCmo/CK2/MgrImpls/: CKBaseManager.hpp  CKObjectManager.cpp  CKObjectManager.hpp  CKPathManager.cpp  CKPathManager.hpp
LibCmo/LibCmo/CK2/ObjImpls/: CK3dEntity.cpp  CK3dEntity.hpp  CK3dObject.hpp  CKBeObject.hpp  CKCamera.cpp  CKCamera.hpp  CKGroup.cpp  CKGroup.hpp  CKLight.cpp  CKLight.hpp  CKMaterial.cpp  CKMaterial.hpp  CKMesh.cpp  CKMesh.hpp  CKObject.cpp  CKObject.hpp  CKRenderObject.hpp  CKSceneObject.hpp  CKTargetCamera.cpp  CKTargetCamera.hpp  CKTargetLight.cpp  CKTargetLight.hpp  CKTexture.cpp  CKTexture.hpp
LibCmo/LibCmo/VxMath/: VxEnums.hpp  VxMath.cpp  VxMath.hpp  VxMemoryMappedFile.cpp  VxMemoryMappedFile.hpp  VxTypes.cpp  VxTypes.hpp
LibCmo/LibCmo/XContainer/: XTypes.cpp
LibCmo/ObjsImpl/: CKObject.cpp
LibCmo/VxMath/: VxEnums.hpp  VxMath.cpp  VxMath.hpp  VxMemoryMappedFile.cpp  VxMemoryMappedFile.hpp  VxTypes.cpp  VxTypes.hpp
LibCmo/XContainer/: XBitArray.cpp  XBitArray.hpp  XTypes.cpp  XTypes.hpp
Unvirt/: .editorconfig  AccessibleValue.cpp  AccessibleValue.hpp  CMakeLists.txt  CmdHelper.cpp  CmdHelper.hpp  ColorfulTerminal.cpp  ColorfulTerminal.hpp  Docstring.cpp  Docstring.hpp  InteractiveCmd.cpp  InteractiveCmd.hpp  StringHelper.cpp  StringHelper.hpp  StructFmt.cpp  StructFmt.hpp  StructFormatter.cpp  StructFormatter.hpp  TerminalHelper.cpp  TerminalHelper.hpp  Unvirt.cpp  Unvirt.vcxproj  Unvirt.vcxproj.filters  UnvirtContext.cpp  UnvirtContext.hpp  Utils.cpp  Utils.hpp  unvirt.c
(+236 files in other folders)
